--- a/src/style.css
+++ b/src/style.css
@@ -25,10 +25,12 @@
 
 .eras-div {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  gap: 1px;
+  width: 100%;
 }
 
-/* todo use grid/gap instead of border to avoid double up */
 .era-box {
   position: relative;
   display: inline-grid;
@@ -36,7 +38,6 @@
   color: white;
   font-weight: bold;
   height: 25px;
-  border: 1px solid #493548;
   background-color: #5b6e80;
 }
 
@@ -51,13 +52,34 @@
   color: white;
 }
 
+.current-era-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.current-era-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 80%;
+}
+
+.current-era-endpoints {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+
 p {
   margin-bottom: 0;
 }
 
 h1 {
-  font-size: 2.6em;
+  font-size: 2.3em;
   margin-top: 0;
+  margin-bottom: 0.5em;
 }
 
 a {
